--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,7 +8,9 @@
   },
   "permissions": [
     "contextMenus",
-    "storage"
+    "storage",
+    "identity",
+    "identity.email"
   ],
   "host_permissions": [
     "https://*/*",
