--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.2",
     "@reduxjs/toolkit": "^1.8.5",
+    "antd-mobile": "^5.22.0",
     "axios": "^0.27.2",
     "eventemitter3": "^4.0.7",
     "extensionizer": "^1.0.1",
