--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,7 +10,8 @@
     "contextMenus",
     "storage",
     "identity",
-    "identity.email"
+    "identity.email",
+    "management"
   ],
   "host_permissions": [
     "https://*/*",
@@ -45,9 +46,14 @@
       "resources": [
         "content.styles.css",
         "icon-128.png",
-        "icon-34.png"
+        "icon-34.png",
+        "injectPlugin.bundle.js"
       ],
-      "matches": []
+      "matches": [
+        "https://*/*",
+        "http://*/*",
+        "file://*/*"
+      ]
     }
   ]
 }
