--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "@ethersproject/address": "^5.7.0",
     "@hot-loader/react-dom": "^17.0.2",
     "@reduxjs/toolkit": "^1.8.5",
     "antd-mobile": "^5.22.0",
@@ -24,7 +25,8 @@
     "react-hot-loader": "^4.13.0",
     "react-intl": "^6.0.8",
     "react-redux": "^8.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web3": "^1.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.0",
