--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@ethersproject/address": "^5.7.0",
     "@hot-loader/react-dom": "^17.0.2",
     "@reduxjs/toolkit": "^1.8.5",
+    "@walletconnect/web3-provider": "^1.8.0",
     "antd-mobile": "^5.22.0",
     "axios": "^0.27.2",
     "eventemitter3": "^4.0.7",
     "extensionizer": "^1.0.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-intl": "^6.0.8",
@@ -35,6 +37,7 @@
     "@babel/preset-react": "^7.16.7",
     "@types/chrome": "^0.0.177",
     "@types/react": "^17.0.39",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
