--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Plugin",
-  "description": "Plugin",
+  "name": "Inferer",
+  "description": "Inferer is a user identity analysis service in web3",
   "options_page": "options.html",
   "background": {
     "service_worker": "background.bundle.js"
