--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,8 +10,7 @@
     "contextMenus",
     "storage",
     "identity",
-    "identity.email",
-    "management"
+    "identity.email"
   ],
   "host_permissions": [
     "https://*/*",
