--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "antd-mobile": "^5.22.0",
     "axios": "^0.27.2",
+    "echarts": "^5.4.1",
     "eventemitter3": "^4.0.7",
     "extensionizer": "^1.0.1",
     "node-sass": "^7.0.1",
