--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,6 +33,9 @@
       ],
       "js": [
         "contentScript.bundle.js"
+      ],
+      "css": [
+        "content.styles.css"
       ]
     }
   ],
